fix: on tablet

--- a/JobFairApplication/src/app/pages/candidate-details/candidate-details.page.scss
+++ b/JobFairApplication/src/app/pages/candidate-details/candidate-details.page.scss
@@ -243,6 +243,11 @@ ion-button{
         font-size: 20px;
     }
 }
+.jobs-applied {
+    h5 {
+        font-size: 20px;
+    }
+}
 
 .experience {
     h5 {
