--- a/JobFairApplication/src/app/pages/home/home.page.scss
+++ b/JobFairApplication/src/app/pages/home/home.page.scss
@@ -75,7 +75,7 @@ ion-list{
     .ion-text-center{
         background-image: none;
         background-color: $color-light-red;
-        height: 50%;
+        height: 30%;
         // max-height:350px;
     }
     .lists h3{
